[rest-api]complete user
